--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,6 @@
             "email": "suiton2007@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "minimum-stability": "dev"
 }
